Update 파이썬을 이용한 백준 소스 제출 봇.md

--- a/파이썬을 이용한 백준 소스 제출 봇.md
+++ b/파이썬을 이용한 백준 소스 제출 봇.md
@@ -1,5 +1,11 @@
 # Python을 이용한 백준 소스 제출 봇 제작 방법
 
+## 주의 : 로그인이 안됨
+
+2021년? 정도부터 이런 식의 로그인이 막힌 것 같다
+
+:link: [크롤링으로 로그인 혹시 불가능할까요?](https://www.acmicpc.net/board/view/56545)
+
 ## Requirements
 
 제작 언어는 Python 3를 기본으로 합니다.  
